fix up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,36 @@
 *.ct.info
 *.keep
 *.pyc
+.ipynb_checkpoints/
+REL606.fa.gz
+SRR098038.fastq.gz
+SRR098042.fastq.gz
+TODO
+Untitled0.ipynb
+corr-errors.details.txt
+corr-errors.details.txt.gz
+ec/
+ecoli-align.txt
+ecoli-mapped.fq.gz.keep.gz
+ecoli-subset.100k.stats.txt
+ecoli-subset.fq.err1
+ecoli-subset.fq.err2
+ecoli-subset.fq.err3
+ecoli-subset.fq.err4
+ecoli.align.out
+ecoli.sh
+ecoli_dn_counts.out
+ecoli_quake_list.txt
+error_model.ecoli-subset.100k.txt
+lenski.out
+lenski.sh
+ref-errors.details.txt
+ref-errors.details.txt.gz
+simple-alt.counts
+simple-foo.fa
+simple-haplo-reads.fa.ct.failed
+simple-haplo.counts
+simple-haploreads.fa
+simplefoo.fa
+testing.ipynb
+variants.txt
